# github-sdlc-agent

./: .env.example  .gitignore  CLAUDE.md  README.md  private-key.pem  pyproject.toml  requirements.txt
.github/workflows/: on_issue.yml  on_pr.yml
docker/: Dockerfile  docker-compose.prod.yml  docker-compose.yml
docs/: REVIEW.md  TASK.md
src/: README.md  cli.py  config.py  github_client.py  llm_client.py  runner.py  server.py
src/agents/: README.md  code_agent.py  reviewer_agent.py
